--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "pinia": "^2.1.4",
     "tdesign-vue-next": "^1.3.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2"
