--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "tdesign-vue-next": "^1.3.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2"
